--- a/Photo Gallery/styles.css
+++ b/Photo Gallery/styles.css
@@ -2,13 +2,8 @@
   box-sizing: border-box;
 }
 
-.gallery {
-  width: 50%;
-  border: 5px solid red;
-}
-
-img {
-  width: 100%;
-  padding: 5px;
-  border: 5px solid blue;
-}
+.gallery img {
+    width: 100%;
+    max-width: 350px;
+    height: 300px;
+  }
