--- a/Photo Gallery/styles.css
+++ b/Photo Gallery/styles.css
@@ -16,9 +16,12 @@ body {
     color: #fff;
     border-bottom: 4px solid #fdb347
 }
+
 .gallery{
-    display: flex;;
+    display: flex;
+    flex-direction: row;
 }
+
 .gallery img {
     width: 100%;
     max-width: 350px;
